--- a/readme.org
+++ b/readme.org
@@ -1,7 +1,7 @@
 # name:    readme.org
 # author:  nbehrnd@yahoo.com
 # date:    [2024-12-04 Wed]
-# edit:
+# edit:    [2024-12-05 Thu]
 # license: GPL, version 2.
 
 #+OPTIONS: toc:nil
@@ -125,6 +125,47 @@ the executable inside a do-loop, or with GNU Parallel:[fn:parallel]
 ls *.xyz | while read i; do exe "$i" -s; done  # sequential run
 ls *.xyz | parallel -j4 "exe {} -s"  # use up to 4 processors
 #+end_src
+
+A direct pipe like
+
+#+begin_src sh
+  $ obabel -:"c1ccncc1" -h --gen3d -oxyz | ./exe | obabel -ixyz -O out.mol2
+  1 molecule converted
+  1 molecule converted
+  $ cat out.mol2
+  @<TRIPOS>MOLECULE
+  ,*****
+   11 11 0 0 0
+  SMALL
+  GASTEIGER
+
+  @<TRIPOS>ATOM
+        1 C           1.4330    0.0516    0.0010 C.ar    1  UNL1       -0.0589
+        2 H           2.5185    0.0904   -0.0011 H       1  UNL1        0.0618
+        3 C           0.6880    1.2260    0.0015 C.ar    1  UNL1       -0.0436
+        4 H           1.1715    2.1963    0.0013 H       1  UNL1        0.0633
+        5 C          -0.6942    1.1256    0.0022 C.ar    1  UNL1        0.0276
+        6 H          -1.3198    2.0134    0.0001 H       1  UNL1        0.0829
+        7 N          -1.3624   -0.0485    0.0055 N.ar    1  UNL1       -0.2633
+        8 C          -0.6120   -1.1719    0.0069 C.ar    1  UNL1        0.0276
+        9 H          -1.1726   -2.1023    0.0115 H       1  UNL1        0.0829
+       10 C           0.7738   -1.1733    0.0033 C.ar    1  UNL1       -0.0436
+       11 H           1.3254   -2.1063    0.0027 H       1  UNL1        0.0633
+  @<TRIPOS>BOND
+       1     2     1    1
+       2     6     5    1
+       3     1     3   ar
+       4     1    10   ar
+       5     4     3    1
+       6     3     5   ar
+       7     5     7   ar
+       8    11    10    1
+       9    10     8   ar
+      10     7     8   ar
+      11     8     9    1
+#+end_src
+
+equally is possible.
 
 Folder =examples= include reference data about diethyl ether,
 pyridine, and cysteine prior and after running the executable.
